plang/testing/logs/false-incorrect/33/program33.p.p
j8sws :- (r (bOc99) FD5y (I)); (vdFnO (dHbDe (Udu)) (q0 oyuy) (baBj) (c)), t9nuw (R) EH v sB; d FSC (uFB (MZBDC) TgL2Z (WXpr)) (L), e (tRGQ) ErtJq (Wixk); (q nYB (bze (M) (sfjch) S) (yj (E) qh) (xQK3c J); ix9Z IhA), kjzLe (foZE0 (BGL) G (H5d)) (ltmd0 (lF0K (rqVvL yhr OSL HBM)) (FBv4b) xJh) VZT; eM vq2 v69rq (gdF XPO) Hoe, kpg (NJI7e) GuB ch eR5Yf, f (PiQXE) (Ydp), rc BlhU, d8 (Qat); b (i1e (A)) (I6) N3; tXcsv, f3 (C24H1) Fj2 (wWWPt gW95D (PE)) (M59); rLwl LWmcp; b (ta tF (K) (OID)) to.


k u73kT.
bXW :- (vuGlP, ipE8 ir0q R), (lwT joc (n897 (lW Gx B (sog (z (M4) Olq) xon (H3) v7CvB)) (V)) (b Hs) Hs; inzJ (fLvpC (vP) (Rt) (u (a))) izVv WI (ad6W)); zTo7, (pzRK); gT EPV (Fates) (PoyHu) (FI); (dUuj xDaNq (rhwRc o) H3Po4 R8, dW31).


wsQD oF8iT (v w (DjUR) (QGi2)) (oJZ Gy).

sEm (V) WQd9t dvB2 d0 :- h.
f (B27nl) :- bQRjD (j4EW (VcM)) (S) (PCC8B) (xp (Mm) (Lq)).

pBjT1.


a8 (imWE) (G6) (lC (X) (MZ) cH).
b5MZ (RKe) wP jnH (pU (K) l0H9 (l (s L PpYH qauOh) SF ib) yAj8) :- wAE; uQN (LzhRM); (hG (c) XEGXm (GTRh) (SOA)); ej; q4ORB st qtx6 c6N x; vOo, uvAen n xnX7l D, uD3Ac (Q) C qUu qj; wT9zw (XYw) LUOHm s (OoBb), qarxe; q bD, tO (SM6), txM (qP tsc (FcIx)) (JXJ).
ichje :- qr2 (QF) g (FeMRL) NHT, c (Glt); r (u4) (ldyCx TdYu (E) daab) (y EQ7h (F4D) (B) nJLX) (yFSwX (S) (gR YPnAU (Al) (ZQ)) yEApK Au4fY); n (C) B (b o (j kScLO Qa (G)) G8Z); (bvpA O97 (TYx1M) (gc) (kqvv (K5mQ6) (l3O (y05S (dGW (vrdTe DNo (EllWX) (spRA (dj1 (YwGJ) P (jS8g TDbe (wW7yc) WfmN (fT vMb))) (h (wG2Pz (Kju) (itHPK KdR8N s (RT) nE0M) kn)))) (dqAD Cvi (Z) (PDCa5)) jiRl3) (iMn) Q)) vQ)), (oveY X1 (F07fW) OQ (Ud)), w (sD M2o6 (vonG UNjv (fgesj h (xcU Rwe (Yc) (Cg)) (XbOc)) KONCs g8tb) (VVub)) HAG Vic; vWP.
j2 (Oy4d) HZ.

e.
hRaKq SUhk (VNdN) VCZG Uqnmf :- gk (pwye (Uzu3y) (ug (sWokr))) K49De, qbRy mcjyz; (r); qvEno (k IO (nUF (IF) (WlnBE)) (JHYTZ) (Rl)) HmA, (z9ZV (v5 (v (eYg6 (C) (xa) yJHW)) H) Nk1); sshSF (BY) E (t99dP GV) (OmB), yr, (ypfc, bUPS Hvjw F (Z)), o (tcj x (i et w LzZan yTCy) hr UxCh), q5zKx (nt), (l95 p); (haqS (nHrv (gpgKq (y7 Y6s (nJT (h1 (SKOlq) (lrhp7 s4a (B))) (XsU95) (PBiQ) h) Hlzfc wRA8n) rwA N99 FM)); zQLgb (F3ARE) (SYpH) pg), (jN79l F qsGq, x8 (Mwtah) L SGUfM (KtjP); nJ5X).
gaoTN (F9P3) (u7Elp (Ur)) Ed7.
z4O fZp.


? (uOMwV, (vsVlJ (Krt8)); y (SOWWN) (W) acLI9 I9; ((v (q8 G wnI) YJ Ld (zYjfO (U) (E) (VluV)))); v Q, hHi (CXOs) UIX; t (wrg (WRkak) (BvjJW)) (m1 (BaY) (AvI) (u JVS) n8z) RAg (bl)).



